[build-system]
requires      = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "mitl"
version     = "0.1.0"
description = "Manual-in-the-Loop constraint projection for ICS anomaly detection"
readme      = "README.md"
requires-python = ">=3.8"
license     = { text = "MIT" }
authors     = [{ name = "sassom2112", email = "sassom2112@gmail.com" }]
keywords    = ["ICS", "OT", "anomaly detection", "constraint projection",
               "specification-based", "MITL", "cybersecurity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scikit-learn>=1.0",
]

[project.optional-dependencies]
bedrock = ["boto3>=1.34"]
dev     = ["pytest>=7", "black", "ruff"]

[project.scripts]
mitl = "mitl.cli:main"

[project.urls]
Repository = "https://github.com/sassom2112/mitl"
"Research Repo" = "https://github.com/sassom2112/ics-sim-anomaly-detection"
Paper      = "https://arxiv.org/abs/XXXX.XXXXX"

[tool.setuptools.packages.find]
include = ["mitl*"]

[tool.ruff]
line-length = 100
